--- a/indexMappe/index.html
+++ b/indexMappe/index.html
@@ -29,7 +29,8 @@
                     </h2>
                 </div>
                 <div id="header_img">
-                    <a href=""></a>
+                    <h2>BUTTON</h2>
+                    <!--<a href=""></a>-->
                 </div>
 
 
