--- a/indexMappe/index.html
+++ b/indexMappe/index.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div id="box4">
-                    <a href="../uxuiMappe/">
+                    <a href="../uxuiMappe/ux.html">
                         <div class="innerBox">
                             <h2>UX/UI</h2>
                         </div>
