--- a/introMappe/intro.html
+++ b/introMappe/intro.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
             <a href="../indexMappe/index.html">
-                <img src="../imgs/logo.png" alt="Logo">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </a>
         </div>
         <nav>
@@ -56,81 +56,105 @@
 
 
 
-
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Intro Uge</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Begyndelsen af semesteret, hvor vi fik en fornemmelse af, hvad der venter os, med introduktionen til
+                    Figma, FileZilla og
+                    mere.</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/introImgs/præsenationkort.webp" alt="figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Vi blev introduceret til figjam som indgår i figma, men lader en gå vild med design. Vores første
+                        opgave var at lave et
+                        kreativt præsentationskort af os selv</p>
                 </div>
             </div>
 
             <div>
-                <img src="../imgs/placehodler1.png" alt="figma pic">
+                <img src="../imgs/introImgs/figmaLayout.webp" alt="figma pic">
             </div>
 
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Introduktion til teams og teamwork i figma.
                 </p>
             </div>
 
-            <h2>lorem ipsum</h2>
+            <h2>Køb af Domæne og upload</h2>
 
             <div class="grid1_1-2-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/introImgs/figjam_layout.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>
+                        Vi arbejdede på vores første projekter i både figma og figjam
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/introImgs/filezillaLayout.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>FileZilla brugte vi sammen med VSCode til at uploade lokale filer fra din projektmappe til et
+                        eksternt domæne via FTP.
+                        Efter at have redigeret koden i VSCode, forbinder du FileZilla til din webserver og overfører
+                        opdaterede filer for at
+                        gøre ændringerne live.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/introImgs/onestartyourownwebsite.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>
+                        we bought a domain on one.com where we would later upload our websites to remote
                     </p>
                 </div>
             </div>
 
         </div>
+
+        <div class="background_div2">
+            <h2>Produkt</h2>
+            <div>
+                <p>Summary;</p>
+            </div>
+
+            <div class="grid4_1-1">
+                <div id="endDivpic">
+                    <img src="../imgs/introImgs/figmaIcon.webp" alt="pic1">
+                </div>
+
+                <div id="endDivtxt">
+                    <p>I dette tema var fokus på Figma, og det grundlæggende i de grænseflader, vi senere ville bruge
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
+        <div class="grid1_1-3-1">
+            <div id="logo_container2">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
+            </div>
+            <div>
+                <h2>Lorem ipsum</h2>
 
+                <p>orem ipsum dolor sit amet consectetur adipisicing elit. Est temporibus</p>
+
+                <p>dolor voluptatibus fugiat consequatur dignissimos</p>
+            </div>
+            <div>
+                <p>Instagram</p>
+
+                <p>tiktok</p>
+            </div>
+        </div>
     </footer>
 
 </body>
